fixing up contact on mobile

--- a/src/modules/Services.module.css
+++ b/src/modules/Services.module.css
@@ -26,7 +26,7 @@
   margin-top: 25px;
   display: grid;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   grid-template-areas:
     "card" "card" "card"
     "card" "card" "card";
